# practice-cpp

./: .gitignore  README.md
accumulation_traits/: main.cpp
algorithm/longest-common-subsequence/: lcs.cpp
algorithm/palindromes/: maximum_palindromes.cpp  short_palindrome.cpp
async/: CMakeLists.txt  async.h  async_vs_thread.h  execption.h  main.cpp  notification.h  shared_future.h
atomic/: CMakeLists.txt  main.cpp  spin_lock.h
atomic_memory_model/: CMakeLists.txt  main.cpp
c++20/concepts/: CMakeLists.txt  main.cpp
concurrency/thread_safe_singleton/: CMakeLists.txt  atomic.h  call_once.h  double_checked_locking.h  lock_guard.h  main.cpp  meyers_singleton.h  simple_locking.h
concurrency/vector_sum/: CMakeLists.txt  main.cpp  multi_therad.h  single_thread.h  thread_local.h
condition_variable/: CMakeLists.txt  main.cpp
function_overloading/: CMakeLists.txt  main.cpp
immutable_user_defined_type/: CMakeLists.txt  main.cpp
lock/: CMakeLists.txt  main.cpp  scoped_lock.h  unique_lock.h
memory_fences/: CMakeLists.txt  main.cpp
optimization/cache/: 01_read.cpp  02_cache_random_read.cpp  03_cache_random_write.cpp  04_cache_sequential_read.cpp  05_cache_sequential_write.cpp  06_list_vector.cpp  CMakeLists.txt
optimization/concurrency/: 01_sharing_incr.cpp  02_atomic_index.cpp  03_ts_unique_ptr.cpp  04_shared_ptr.cpp  CMakeLists.txt
optimization/high_performance/: 01_vector_sort.cpp  02_rvo.cpp  03_buffer.cpp  04_branch.cpp  CMakeLists.txt
optimization/pipelining/: 01_superscalar.cpp  02_pipelining.cpp  03_branch.cpp  CMakeLists.txt
optimization/substring_sort/: 01_compare_mbm.cpp  02_compare.cpp  02_compare_mbm.cpp  03_compare_mbm.cpp  CMakeLists.txt
optimization/thread_and_memory/: 01_cache_sequential_write.cpp  02_sharing_incr.cpp  03_mutex_incr.cpp  04_local_incr.cpp  05_barrier_incr.cpp  06_barrier_load.cpp  07_barrier_store.cpp  CMakeLists.txt
perfect_forwarding/: CMakeLists.txt  main.cpp
shared_lock/: CMakeLists.txt  main.cpp
string_utils/: CMakeLists.txt  main.cpp  string_utils.hpp
templates/CRTP/: CMakeLists.txt  exam01.cpp  exam02.cpp  exam03.cpp  exam04.cpp  exam05.cpp  exam06.cpp  exam07.cpp  exam08.cpp  exam09.cpp
templates/SFINAE/: CMakeLists.txt  main.cpp
templates/accumulation_traits/: CMakeLists.txt  accum_traits_v1.h  accum_traits_v2.h  accum_traits_v3.h
templates/detect_member/: CMakeLists.txt  main.cpp
templates/iterator_adapter/: CMakeLists.txt  main.cpp
templates/iterator_facade/: CMakeLists.txt  iterator_facades.h  main.cpp
templates/member_templates/: CMakeLists.txt  main.cpp
templates/object_counter/: CMakeLists.txt  main.cpp
templates/predicate_traits/: CMakeLists.txt  main.cpp
templates/raw_array/: CMakeLists.txt  main.cpp
templates/special_member_func/: CMakeLists.txt  main.cpp
templates/transformation_traits/: CMakeLists.txt  main.cpp
templates/type_erasure/: CMakeLists.txt  function_ptr.h  main.cpp  try_equals.h
templates/typelist/: CMakeLists.txt  main.cpp  typelist.h  valuelist.h
templates/typename_keyword/: CMakeLists.txt  main.cpp
templates/variadic_templates/: CMakeLists.txt  main.cpp
thread/: CMakeLists.txt  main.cpp
threadsafe_queue/: CMakeLists.txt  main.cpp
threadsafe_stack/: CMakeLists.txt  main.cpp
